# openclone_v4

./: .gitignore  README.md  cloudbuild.yaml  vercel.json
.claude/: launch.json
backend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/scripts/: apply_migrations.sh
backend/src/: app.ts  index.ts
docs/: backend_todo_v1.md  code_review_report_20250301.md  frontend_todo_v1.md  requirements_definition.md  system_design_v1.md
docs/contracts/: error_catalog_v1.md  openapi_v1.yaml  parallel_dev_handoff_v1.md
docs/research/: architecture_drawio_mcp.md  face_only_avatar_feasibility.md  mermaid_flow_and_sequence.md  mock_structured_outputs.json  model_feasibility_assessment.md  nanobanana2_avatar_pipeline.md  nanobanana2_fullbody_motion_prompt_flow_best_practices_ja.md  (+7 more)
experiments/elevenlabs_verification/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
experiments/elevenlabs_verification/.playwright-cli/: page-2026-02-28T13-03-38-195Z.yml
experiments/elevenlabs_verification/scripts/: __init__.py  gradio_app.py  test_gradio_app.py  verify_setup.py  voice_cloning.py
front_mock/: .env.example  .gcloudignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
screen-shot/: cloudrun-chat-after-send.yaml  cloudrun-chat-ready.yaml
scripts/: deploy-frontend.sh  generate_body_template_showcase_gif.py  generate_body_templates.py  generate_demo_animations.py  generate_demo_pixel_art.py
(+92 files in other folders)
